--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-webcam": "^7.2.0",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
